@@ -18,7 +18,13 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
-    jvmArgs.add("--enable-preview")
+    jvmArgs(
+        "--enable-preview",
+        "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+        "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+        "--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED",
+        "--add-opens=java.base/jdk.internal.vm.annotation=ALL-UNNAMED",
+    )
 }
 
 tasks.compileJava {
